# burrow-owl

./: .bzrignore  .gitignore  AUTHORS  INSTALL  INSTALL-PROBLEMS  Makefile.am  README  README.branch  THANKS  TODO  burrow-owl.pc.in  config.h.in  configure.ac  suppress_guile.vg  y2k.txt
benchmarks/: Makefile.am  b_cache.c  b_hsqc.c  b_strip.c  b_strip_2.c  generate-test-file.c
burrow/: Makefile.am  canvas.h  spectrum.h
burrow/burrow/: burrow.h
burrow/canvas/: Makefile.am  boomerang.c  boomerang.h  cairo_shapes.c  cairo_shapes.h  canvas-enums.h  canvas-enums.template  canvas.c  canvas.h  canvasitem.c  canvasitem.h  contour-color.c  contour-color.h  contourplot.c  contourplot.h  cursor.c  cursor.h  grid.c  grid.h  line.c  line.h  marker.c  marker.h  marker_text.c  marker_text.h  marshal.cmd  ornament.c  ornament.h  painter_cairo.c  painter_cairo.h  painter_gdk.c  painter_gdk.h  spectrum-profile.c  spectrum-profile.h
burrow/canvas/gw/: Makefile.am  canvas-spec.scm  canvas.scm  run-g-wrap.scm
burrow/guile/: spectrum.scm
burrow/guile/burrow/: amino-codes.scm  assignments.scm  chemical-shift-distributions.scm
burrow/spectrum/: Makefile.am  burrow_endian.c  contour.c  contour.h  debug.h  endian.h  nih.c  painter.c  painter.h  painter_bwps.h  point_cache.c  point_cache.h  skiplist.c  spectrum.c  spectrum.h  spectrum_convoluted.c  spectrum_convoluted.h  spectrum_diagonal_project.c  spectrum_diagonal_project.h  spectrum_extract.c  spectrum_extract.h  spectrum_integrated.c  spectrum_integrated.h  spectrum_priv.h  spectrum_project.c  spectrum_project.h  spectrum_segmented.c  spectrum_transpose.c  spectrum_transpose.h  spectrum_unfold.c  ticket.c  utils.h  version.c  version.h
burrow/spectrum/finite-state-machine/: Makefile.am  contour-fsm.h  contour-spec.fsm
burrow/spectrum/gw/: Makefile.am  run-g-wrap.scm  spectrum-spec.scm  spectrum.scm
doc/: Doxyfile.in  Makefile.am
nmr-utils/: Makefile.am  README  autogen.sh  configure.ac  list-experiments
nmr-utils/modules/: Makefile.am  acqu-grok.scm  amino-codes.scm  average-shift.scm  reference.scm
nmr-utils/pipe-reference/: Makefile.am
nmr-utils/src/: Makefile.am  interleave.c  pipe-reference.c  pipehdr.h
patches/: gdk-color.patch  libffi-cflags.patch  srfi-35.patch
scripts/: aa-filter  compare  compare-zoom  peak-fitter  plotter  sequential-assigner  strip-viewer  sucks  viewer
src/: Makefile.am  box.h  burrow.h  canvasitem.c  canvasitem.h  common.h  contour.c  contour.h  contourplot.c  contourplot.h  cursor.c  cursor.h  debug.c  debug.h  filebuf.c  filebuf.h  grid.c  grid.h  hosbacking.c  hosbacking.h  hosbackingblock.c  hosbackingblock.h  hosbackingcache.c  hosbackingcache.h  hosbackingfile.c  hosbackingfile.h  hosbackingsim.c  hosbackingsim.h  hoscanvas.c  hoscanvas.h  hosdimension.c  hosdimension.h  hosdimensionblock.c  hosdimensionblock.h  hosdimensionsim.c  hosdimensionsim.h  hosspectrum.c  hosspectrum.h  line.c  line.h  (+39 more)
src/burrow/: Makefile.am  nih.h  spectrum.h  spectrum_convoluted.h  spectrum_integrate.h  spectrum_integrated.h
src/canvas/: Makefile.am  box.c  box.h  canvas.h  canvasitem.c  canvasitem.h  cursor.c  hoscanvas.c  line.h  marker_text.c  marshal.cmd  ornament.c  ornament.h  painter_cairo.c  painter_gdk.c  spectrum-profile.c  spectrum-profile.h
src/canvas/gw/: Makefile.am  canvas-spec.scm  canvas.scm
src/finite-state-machine/: Makefile.am  README  contour-fsm.h  contour-spec.fsm  fsm-compiler
src/guile/: spec-extra.scm
src/guile/burrow/: assignments.scm  chemical-shift-distributions.scm  hacks.scm
src/gw/: Makefile.am  spectrum-spec.scm  spectrum.scm
src/include/: nih.h  spectrum.h  spectrum_integrate.h
src/models/: Makefile.am  expression.h  model-generate.scm  model-subtypes.c  model-subtypes.h  model.c  model.h  model_sum.h  parameter.c  parameter.h  solver.c  solver.h  solver_anneal.c  solver_anneal.h  spectrum_model.c  spectrum_model.h
src/models/gw/: Makefile.am  model-spec.scm  model.scm  run-g-wrap.scm  spectrum-type.defs
test-suite/: Makefile.am  guile-gnome-test  guile-test  run-tests.in  segment-sim.c  segment-sim.h  spectrum-flaky.c  spectrum-flaky.h  spectrum-ramp.c  spectrum-ramp.h  spectrum-test-cube.c  spectrum-test-cube.h  t_async.c  t_cache.c  t_cancel.c  t_collision.c  t_convolute.c  t_diagonal_project.c  t_extract.c  t_flake.c  t_integrate.c  t_painter_redraw.c  t_project.c  t_segment.c  t_segment2.c  t_segment_accumulate.c  t_segment_async.c  t_segment_simple.c  t_skiplist.c  t_spectrum.c  t_transpose.c  t_traverse_blocking.c  t_traverse_override.c  t_unfold.c  test-utils.c  test-utils.h
test-suite/data/: assignments.scm
test-suite/guile-binding/: Makefile.am  assignment-convert.test  diagonal-projection.test  gdk-color.test  guile-gnome-test  guile-gnome.test  model-fit-2.test  model-fit.test  model-gc.test  model-spectrum.test  no-display-fail.test  no-display.test  open-spectrum-test  open-spectrum.test  regression-1.2.test  spectrum-gc.test  transpose.test
test-suite/tests/: diagonal-project.test  open-spectrum.test  regression-1.2.test  transpose.test
utils/: h2def.py
wrapper/: burrow.in  pre-inst-burrow-env.in
