#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(nmr, 1.0, [gbenison@gmail.com])
AC_CONFIG_SRCDIR([modules/average-shift.scm])
AC_PREFIX_DEFAULT(${HOME}/AC_PACKAGE_NAME)

AC_PROG_CC

AM_INIT_AUTOMAKE

AC_CONFIG_FILES([Makefile
	         modules/Makefile
                 pipe-reference/Makefile])

AC_OUTPUT


