
TESTS_ENVIRONMENT=EXAMPLE_DIR=@srcdir@/../data G_SLICE=debug-blocks @top_builddir@/@pre_install_path@/pre-inst-burrow-env @GUILE@ -s 
TESTS=guile-gnome.test   \
      gdk-color.test     \
      open-spectrum.test \
      model-gc.test      \
      transpose.test     \
      diagonal-projection.test \
      regression-1.2.test \
      spectrum-gc.test    \
      model-spectrum.test \
      model-fit.test      \
      model-fit-2.test

EXTRA_DIST=$(TESTS)
